# codescope

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/migrations/: 0001_catalog_metadata.down.sql  0001_catalog_metadata.up.sql  0002_org_metadata.down.sql  0002_org_metadata.up.sql  0003_repository_permission_bindings.down.sql  0003_repository_permission_bindings.up.sql  0004_sessions.up.sql  0005_ask_threads.down.sql  0005_ask_threads.up.sql  0006_review_agent_runs.down.sql  0006_review_agent_runs.up.sql  0007_delivery_attempts.down.sql  0007_delivery_attempts.up.sql  0008_local_account_password_hash.down.sql  0008_local_account_password_hash.up.sql  0009_api_key_oauth_client_metadata.down.sql  0009_api_key_oauth_client_metadata.up.sql  0010_repository_sync_jobs.down.sql  0010_repository_sync_jobs.up.sql  0011_ask_thread_messages.down.sql  0011_ask_thread_messages.up.sql  0012_auth_audit_events.up.sql  0013_external_accounts.down.sql  0013_external_accounts.up.sql  0014_local_repository_paths.down.sql  0014_local_repository_paths.up.sql  0015_repository_sync_job_terminal_metadata.down.sql  0015_repository_sync_job_terminal_metadata.up.sql
crates/api/src/: ask.rs  auth.rs  browse.rs  commits.rs  main.rs  storage.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  main.rs
crates/worker/tests/: explicit_completed_stub_outcome_smoke.rs  invalid_stub_outcome_smoke.rs  no_queued_review_agent_run_idle_smoke.rs  repository_sync_claim_smoke.rs  worker_runtime_logging_smoke.rs
scripts/: backup_local_metadata_db.sh  backup_local_runtime_state.sh  bootstrap_local_metadata_dev.sh  check_end_to_end_smoke_matrix.sh  check_end_to_end_smoke_matrix_contract.sh  check_local_metadata_backup_contract.sh  check_local_metadata_backup_restore_smoke.sh  check_local_metadata_dev_bootstrap_contract.sh  check_local_metadata_dev_bootstrap_smoke.sh  check_local_metadata_env_contract.sh  check_make_sqlx_migrate.sh  check_metadata_bootstrap_docs.sh  check_operator_maintenance_contract.sh  check_runtime_backup_uniqueness.sh  check_sqlx_test_workflow.sh  restore_local_metadata_db.sh  restore_local_runtime_state.sh
specs/: CLEAN_ROOM_RULES.md  FEATURE_PARITY.md  fixtures-policy.md  (+1 more)
web/: index.html  (+3 more)
(+65 files in other folders)
