[workspace]
members = [
  "crates/api",
  "crates/worker",
  "crates/search",
  "crates/core",
  "crates/git",
  "crates/config",
  "crates/models",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Hermes Agent"]

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
