[package]
name = "sourcebot-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
async-trait.workspace = true
time.workspace = true
globset = "0.4"
tower = { version = "0.5", features = ["util"] }
sourcebot-core = { path = "../core" }
sourcebot-config = { path = "../config" }
sourcebot-models = { path = "../models" }
sourcebot-search = { path = "../search" }
sourcebot-mcp = { path = "../mcp" }
argon2 = "0.5"
