[package]
name = "sourcebot-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
sourcebot-core = { path = "../core" }
sourcebot-config = { path = "../config" }
sourcebot-models = { path = "../models" }
