[package]
name = "sourcebot-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sourcebot-api = { path = "../api" }
sourcebot-core = { path = "../core" }
sourcebot-config = { path = "../config" }
sourcebot-models = { path = "../models" }

[dev-dependencies]
serde_json.workspace = true
